# mcheck

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure  configure.ac  libtool  mcheck.c  mcheck.h  meminfo.c  meminfo.h
example/: Makefile  Makefile.am  Makefile.in  func.c  mcheck.rpt  mcheck_sample  mcheck_sample.c
